added standalone disassembler

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,8 +1,7 @@
 
 set(ASMJIT_STATIC TRUE)
 
+add_subdirectory(asmjit)
 add_subdirectory(dsp56kEmu)
 add_subdirectory(dsp56kTestRunner)
-add_subdirectory(asmjit)
-
-# ----------------- command-line app
+add_subdirectory(disassemble)
