move P memory writes to a separate function for better interpreter performance + add ability to listen for P memory changes

--- a/source/dsp56kEmu/CMakeLists.txt
+++ b/source/dsp56kEmu/CMakeLists.txt
@@ -12,6 +12,7 @@ buildconfig.h
 disasm.cpp disasm.h
 dspassert.cpp dspassert.h
 dspconfig.h
+dsplistener.h
 dsp.cpp dsp.h 
 dsp_decode.inl
 dsp_jumptable.inl
