--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -39,4 +39,4 @@ jobs:
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
     - name: Run Tests
-      run: ctest --test-dir ${{github.workspace}}/build
+      run: ctest --test-dir ${{github.workspace}}/build -C Release
