update OSS version

--- a/source/dsp56kTestRunner/CMakeLists.txt
+++ b/source/dsp56kTestRunner/CMakeLists.txt
@@ -9,3 +9,4 @@ target_sources(dsp56kTestRunner PRIVATE testRunner.cpp)
 target_link_libraries(dsp56kTestRunner PUBLIC dsp56kEmu)
 
 add_test(NAME dsp56300_unitTests COMMAND dsp56kTestRunner)
+set_tests_properties(dsp56300_unitTests PROPERTIES LABELS "UnitTest;dsp56300")
