--- a/source/dsp56kEmu/CMakeLists.txt
+++ b/source/dsp56kEmu/CMakeLists.txt
@@ -25,6 +25,7 @@ error.cpp error.h
 esai.cpp esai.h
 esaiclock.cpp esaiclock.h
 essi.cpp essi.h
+esxi.cpp esxi.h
 fastmath.h
 gpio.cpp gpio.h
 hdi08.cpp hdi08.h
@@ -99,52 +100,13 @@ jitops_helper_x64.cpp
 jitops_jmp_x64.inl
 )
 
-set(SOURCES_VTUNE
-../vtuneSdk/include/ittnotify.h
-../vtuneSdk/include/jitprofiling.h
-../vtuneSdk/include/libittnotify.h
-../vtuneSdk/include/llvm_jit_event_listener.hpp
-)
-
 target_sources(dsp56kEmu PRIVATE ${SOURCES} ${SOURCES_JIT} ${SOURCES_VTUNE})
 source_group("source" FILES ${SOURCES})
 source_group("source\\jit" FILES ${SOURCES_JIT})
-source_group("source\\vtune" FILES ${SOURCES_VTUNE})
 
-if(WIN32)
-	# If CMAKE_SIZEOF_VOID_P is equal to 8, it's 64 bit
-	if(CMAKE_SIZEOF_VOID_P EQUAL 8)
-		find_library(JIT_PROFILING
-			NAMES
-				jitprofiling
-				jitprofiling.lib
-			PATHS
-				${CMAKE_CURRENT_SOURCE_DIR}/../vtuneSdk/lib64/
-			REQUIRED
-		)
-		find_library(VTUNE_INSTRUMENTATION
-			NAMES
-				libittnotify
-				libittnotify.lib
-			PATHS
-				${CMAKE_CURRENT_SOURCE_DIR}/../vtuneSdk/lib64/
-			REQUIRED
-		)
-		target_link_libraries(dsp56kEmu PUBLIC ${JIT_PROFILING} ${VTUNE_INSTRUMENTATION})
-		target_compile_definitions(dsp56kEmu PRIVATE DSP56K_USE_VTUNE_JIT_PROFILING_API)
-	else()
-		find_library(CM56300
-				NAMES
-					CM56300
-					CM56300.lib
-				PATHS
-					${CMAKE_CURRENT_SOURCE_DIR}/../dsp56k
-				)
-		if(CM56300)
-			target_link_libraries(dsp56kEmu PUBLIC ${CM56300})
-			target_compile_definitions(dsp56kEmu PRIVATE DSP56K_USE_MOTOROLA_UNASM)
-		endif()
-	endif()
+if(WIN32 OR (UNIX AND NOT APPLE))
+	target_link_libraries(dsp56kEmu PUBLIC vtuneSdk)
+	target_compile_definitions(dsp56kEmu PRIVATE DSP56K_USE_VTUNE_JIT_PROFILING_API)
 endif()
 
 if(MSVC)
@@ -155,6 +117,7 @@ if(UNIX AND NOT APPLE)
 	set(THREADS_PREFER_PTHREAD_FLAG ON)
 	find_package(Threads REQUIRED)
 	target_link_libraries(dsp56kEmu PUBLIC Threads::Threads)
+	target_compile_definitions(dsp56kEmu PRIVATE DSP56K_USE_PERF_JIT_PROFILING)
 endif()
 
 target_link_libraries(dsp56kEmu PUBLIC asmjit)
